--- a/analise_exploratoria.ipynb
+++ b/analise_exploratoria.ipynb
@@ -304,6 +304,121 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 107,
+   "source": [
+    "Reviews_category"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>review_score</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>product_category_name</th>\n",
+       "      <th>review_score</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">agro_industria_e_comercio</th>\n",
+       "      <th>1</th>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">utilidades_domesticas</th>\n",
+       "      <th>1</th>\n",
+       "      <td>837</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>594</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3985</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>348 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        review_score\n",
+       "product_category_name     review_score              \n",
+       "agro_industria_e_comercio 1                       27\n",
+       "                          2                        7\n",
+       "                          3                       13\n",
+       "                          4                       57\n",
+       "                          5                      108\n",
+       "...                                              ...\n",
+       "utilidades_domesticas     1                      837\n",
+       "                          2                      249\n",
+       "                          3                      594\n",
+       "                          4                     1278\n",
+       "                          5                     3985\n",
+       "\n",
+       "[348 rows x 1 columns]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 107
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "source": [],
    "outputs": [],
