--- a/analise_exploratoria.ipynb
+++ b/analise_exploratoria.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1> Análise exploratória sobre reviews <h1>"
+    "<h1> Análise exploratória sobre reviews </h1>"
    ]
   },
   {
@@ -34,7 +34,7 @@
    "source": [
     "<h2> Estrutura dos dados <h2>\n",
     "\n",
-    "<img src=\"relacaobd.png\">"
+    "<img src=\"PNG\\relacaobd.png\">"
    ]
   },
   {
@@ -67,6 +67,68 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 99441 entries, 0 to 119142\n",
+      "Data columns (total 39 columns):\n",
+      " #   Column                         Non-Null Count  Dtype  \n",
+      "---  ------                         --------------  -----  \n",
+      " 0   order_id                       99441 non-null  object \n",
+      " 1   customer_id                    99441 non-null  object \n",
+      " 2   order_status                   99441 non-null  object \n",
+      " 3   order_purchase_timestamp       99441 non-null  object \n",
+      " 4   order_approved_at              99281 non-null  object \n",
+      " 5   order_delivered_carrier_date   97658 non-null  object \n",
+      " 6   order_delivered_customer_date  96476 non-null  object \n",
+      " 7   order_estimated_delivery_date  99441 non-null  object \n",
+      " 8   order_item_id                  98666 non-null  float64\n",
+      " 9   product_id                     98666 non-null  object \n",
+      " 10  seller_id                      98666 non-null  object \n",
+      " 11  shipping_limit_date            98666 non-null  object \n",
+      " 12  price                          98666 non-null  float64\n",
+      " 13  freight_value                  98666 non-null  float64\n",
+      " 14  product_category_name          97250 non-null  object \n",
+      " 15  product_name_lenght            97250 non-null  float64\n",
+      " 16  product_description_lenght     97250 non-null  float64\n",
+      " 17  product_photos_qty             97250 non-null  float64\n",
+      " 18  product_weight_g               98650 non-null  float64\n",
+      " 19  product_length_cm              98650 non-null  float64\n",
+      " 20  product_height_cm              98650 non-null  float64\n",
+      " 21  product_width_cm               98650 non-null  float64\n",
+      " 22  seller_zip_code_prefix         98666 non-null  float64\n",
+      " 23  seller_city                    98666 non-null  object \n",
+      " 24  seller_state                   98666 non-null  object \n",
+      " 25  customer_unique_id             99441 non-null  object \n",
+      " 26  customer_zip_code_prefix       99441 non-null  int64  \n",
+      " 27  customer_city                  99441 non-null  object \n",
+      " 28  customer_state                 99441 non-null  object \n",
+      " 29  review_id                      98673 non-null  object \n",
+      " 30  review_score                   98673 non-null  float64\n",
+      " 31  review_comment_title           11551 non-null  object \n",
+      " 32  review_comment_message         40785 non-null  object \n",
+      " 33  review_creation_date           98673 non-null  object \n",
+      " 34  review_answer_timestamp        98673 non-null  object \n",
+      " 35  payment_sequential             99440 non-null  float64\n",
+      " 36  payment_type                   99440 non-null  object \n",
+      " 37  payment_installments           99440 non-null  float64\n",
+      " 38  payment_value                  99440 non-null  float64\n",
+      "dtypes: float64(15), int64(1), object(23)\n",
+      "memory usage: 30.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -75,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,16 +209,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2> Resultado gráfico da distribuição de reviews </h2>\n",
+    "<h2> Resultado visual da distribuição de reviews </h2>\n",
     "\n",
     "<b>Insights:</b>\n",
     "1. Notas 1 aparecem mais que notas 2 e 3 somadas\n",
-    "2. A maior parte de reviews é de 5 estrelas"
+    "2. A maior parte de reviews é de nota 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -195,33 +257,26 @@
    "source": [
     "<h3> Distribuição de notas por categoria de produto </h3>\n",
     "\n",
-    "- É possível notar que acessórios de informatica e móveis de decoração apresentam mais notas negativas do que a média geral."
+    "- É possível notar que móveis de escritório apresentam mais notas negativas do que a média geral e merece uma análise mais aprofundada"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![tittle](Capturar.PNG)"
+    "![tittle](PNG\\Capturar.PNG)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2> Análise mais aprofundada das categorias que chamaram atenção </h2>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h3> Começando por móveis de escritório </h3>"
+    "<h2> Análise mais aprofundada da categoria que chamou atenção: móveis de escritório </h2>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +440,7 @@
        "5  SP             1209"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1079,7 +1134,7 @@
        "[14 rows x 38 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1120,7 +1175,7 @@
    "source": [
     "Distribuição das notas por cidade de SP:\n",
     "\n",
-    "<img src=\"cidades_review_score3.PNG\">"
+    "<img src=\"PNG\\cidades_review_score3.PNG\">"
    ]
   },
   {
@@ -1134,14 +1189,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"cidades_review_score_graf.PNG\">"
+    "<img src=\"PNG\\cidades_review_score_graf.PNG\">"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Distribuição dos zipcode_prefix na cidade de Itaquaquetecetuba:\n",
+    "\n",
+    "<img src=\"PNG\\zip_code_prefix.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
